kubernete-dashboard/kubernetes-dashboard-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard-nodeport-service
  labels:
    k8s-app: kubernetes-dashboard-nodeport-service
  namespace: kubernetes-dashboard
  
spec:
  type: NodePort
  ports:
  - port: 443
    targetPort: 8443
    nodePort: 30001
  selector:
    k8s-app: kubernetes-dashboard
